fix height on mobile

--- a/app/assets/stylesheets/posts.css.scss
+++ b/app/assets/stylesheets/posts.css.scss
@@ -43,4 +43,10 @@
     display: block;
     line-height: 20px;
   }
+  
+  .post-container {
+    position: relative;
+    margin-top: 14px;
+    margin-bottom: 40px;
+  }
 }
